---
source: chainsight-cdk-macros/src/canisters/relayer.rs
expression: formatted
---
use candid::{Decode, Encode};
use chainsight_cdk::convert::scalar::{Convertible, Scalable};
use chainsight_cdk::rpc::{CallProvider, Caller, Message};
use chainsight_cdk::web3::Encoder;
use chainsight_cdk_macros::{
    chainsight_common, define_get_ethereum_address, define_transform_for_web3, define_web3_ctx,
    did_export, init_in, manage_single_state, prepare_stable_structure, relayer_source, setup_func,
    stable_memory_for_scalar, timer_task_func, CborSerde, StableMemoryStorable,
};
use ic_cdk::api::call::result;
use ic_stable_structures::writer::Writer;
use ic_web3_rs::types::{Address, U256};
use std::str::FromStr;
did_export!("relayer");
chainsight_common!();
define_web3_ctx!(2);
define_transform_for_web3!();
stable_memory_for_scalar!("target_addr", String, 3, false);
define_get_ethereum_address!();
stable_memory_for_scalar!("target_canister", String, 4, false);
prepare_stable_structure!();
timer_task_func!("set_task", "index", 7);
init_in!(1);
setup_func ! ({ target_addr : String , web3_ctx_param : chainsight_cdk :: web3 :: Web3CtxParam , target_canister : String , } , 6);
ic_solidity_bindgen::contract_abi!("__interfaces/Uint256Oracle.json");
use relayer::{filter, CallCanisterResponse};
type CallCanisterArgs = relayer::CallCanisterArgs;
pub fn call_args() -> CallCanisterArgs {
    relayer::call_args()
}
relayer_source!("get_last_snapshot");
#[ic_cdk::update]
#[candid::candid_method(update)]
async fn index() {
    if ic_cdk::caller() != proxy() {
        panic!("Not permitted");
    }
    let target_canister = candid::Principal::from_text(get_target_canister())
        .expect("Failed to parse to candid::Principal");
    let call_result = CallProvider::new()
        .call(
            Message::new::<CallCanisterArgs>(
                call_args(),
                _get_target_proxy(target_canister.clone()).await,
                "proxy_get_last_snapshot",
            )
            .expect("failed to create message"),
        )
        .await
        .expect("failed to call by CallProvider");
    let datum = call_result
        .reply::<CallCanisterResponse>()
        .expect("failed to get reply");
    ic_cdk::println!("response from canister = {:?}", datum.clone());
    if !filter(&datum) {
        return;
    }
    let datum = datum.value;
    ic_cdk::println!("val extracted from response = {:?}", datum.clone());
    let datum = datum;
    ic_cdk::println!("val converted from extracted = {:?}", datum.clone());
    let w3_ctx_param = get_web3_ctx_param();
    let call_option_builder = chainsight_cdk::web3::EVMTransactionOptionBuilder::new(
        w3_ctx_param.url,
        w3_ctx_param.chain_id,
        w3_ctx_param.env.ecdsa_key_name(),
    );
    use chainsight_cdk::web3::TransactionOptionBuilder;
    let call_option = call_option_builder
        .build()
        .await
        .expect("Failed to build call_option");
    let result = Uint256Oracle::new(
        Address::from_str(&get_target_addr()).expect("Failed to parse target addr to Address"),
        &web3_ctx().expect("Failed to get web3_ctx"),
    )
    .update_state(format!("{:?}", &datum).into_bytes(), call_option)
    .await
    .expect("Failed to call update_state for oracle");
    ic_cdk::println!("value_to_sync={:?}", result);
}
#[derive(
    Clone,
    Debug,
    PartialEq,
    candid :: CandidType,
    serde :: Serialize,
    serde :: Deserialize,
    CborSerde,
)]
pub struct UpgradeStableState {
    pub initializing_state: InitializingState,
    pub target_addr: String,
    pub web3_ctx_param: chainsight_cdk::web3::Web3CtxParam,
    pub target_canister: String,
    pub indexing_interval: u32,
}
#[ic_cdk::pre_upgrade]
fn pre_upgrade() {
    ic_cdk::println!("start: pre_upgrade");
    let state = UpgradeStableState {
        initializing_state: get_initializing_state(),
        target_addr: get_target_addr(),
        web3_ctx_param: get_web3_ctx_param(),
        target_canister: get_target_canister(),
        indexing_interval: get_indexing_interval(),
    };
    let state_bytes = state.to_cbor();
    let len = state_bytes.len() as u32;
    let mut memory = get_upgrades_memory();
    let mut writer = Writer::new(&mut memory, 0);
    writer.write(&len.to_le_bytes()).unwrap();
    writer.write(&state_bytes).unwrap();
    ic_cdk::println!("finish: pre_upgrade");
}
#[ic_cdk::post_upgrade]
fn post_upgrade() {
    ic_cdk::println!("start: post_upgrade");
    let memory = get_upgrades_memory();
    let mut state_len_bytes = [0; 4];
    memory.read(0, &mut state_len_bytes);
    let state_len = u32::from_le_bytes(state_len_bytes) as usize;
    let mut state_bytes = vec![0; state_len];
    memory.read(4, &mut state_bytes);
    let state = UpgradeStableState::from_cbor(&state_bytes);
    set_initializing_state(state.initializing_state);
    setup(
        state.target_addr,
        state.web3_ctx_param,
        state.target_canister,
    )
    .expect("Failed to `setup` in post_upgrade");
    set_indexing_interval(state.indexing_interval);
    ic_cdk::println!("finish: post_upgrade");
}

